--- a/themes/dohmh/layouts/data-features/cooling-info.html
+++ b/themes/dohmh/layouts/data-features/cooling-info.html
@@ -6,7 +6,9 @@
       <nav aria-label="breadcrumb" class="mb-4">
         <ul class="breadcrumb">
           <li class="breadcrumb-item"><a href="#">Home</a></li>
-          <li class="breadcrumb-item"><a href="/data-features/">Data Features</a></li>
+          <li class="breadcrumb-item">
+            <a href="/data-features/">Data Features</a>
+          </li>
           <li class="breadcrumb-item active" aria-current="page">
             {{ .Title }}
           </li>
@@ -67,10 +69,9 @@
 
   <div class="row no-gutters">
     <div class="col-md-8 mx-auto">
-      <img src="img/hero_6.svg" style="width: 100%" />
+      <img src="img/hero_7.3.png" style="width: 100%" />
     </div>
   </div>
-
 
   <div class="row my-4">
     <!--left-hand sticky column-->
