--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -334,7 +334,7 @@
                 {{- partial "socialshare" . -}}
             </div>
             <h1 class="h2">{{ .Title }} </h1>
-            <p>Get maps, charts, tables, and data about {{ lower .Title }}.</p>
+            <p>Get maps, charts, tables, and data about {{ lower .Title }}. <span class="d-lg-none"><a href="#" data-toggle="modal" data-target="#aboutModal">About {{ lower .Title }}</a>.</span></p>
 
         </div>
     </div>
@@ -342,9 +342,6 @@
     <div class="row no-gutters px-0">
     
         <div class="col-lg-4 col-md-12 pr-2">
-            <!-- About button only on mobile-->
-            <button class="btn btn-sm btn-outline-light text-primary btn-block d-lg-none mt-0 mb-2" type="button"
-                    data-toggle="modal" data-target="#aboutModal">About {{ .Title }}</button>
     
             <div class="d-none d-lg-block">
 
@@ -371,7 +368,7 @@
                     </div>
                 
                     <div class="tab-pane fade" id="tab-02-b" aria-labelledby="tab-btn-02-b" role="tabpanel">
-                        <div class="p-1 overflow-fade-about topic-text mb-1">
+                        <div class="p-1 overflow-fade-about topic-text mb-1 border">
                             {{ .Content  }}
                         </div>
                     </div>
@@ -402,7 +399,7 @@
             <!-- Indicator selection (mobile) -->
             <div class="dropdown d-lg-none">
                 <span class='home-label'>Change dataset</span>
-                <button class="btn btn-outline-primary btn-lg btn-block text-wrap dropdown-toggle" type="button"
+                <button class="btn btn-sm btn-outline-primary btn-lg btn-block text-wrap dropdown-toggle" type="button"
                         id="dropdownIndicator" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     More {{ .Title }} data
                 </button>
@@ -457,7 +454,7 @@
                     </div>
                 </a>
 
-                <a class="ml-auto mt-auto p-1 fs-sm float-right" id="viewDescription">
+                <a class="ml-auto mt-auto p-1 fs-sm float-right d-none d-lg-block" id="viewDescription">
                     View description content here.
                 </a>
         
@@ -588,9 +585,6 @@
                         </div>
 
                     </div>
-                -
-                
-
 
                 </div>
             
@@ -633,133 +627,118 @@
             
                     </div>
                      
-
-
-
                 </div>
             
 
-                <!-- LINKS TAB -->
+                     <!-- LINKS TAB -->
 
-                <div class="tab-pane fade pt-2" id="tab-links" aria-labelledby="tab-btn-links" role="tabpanel">
+                    <div class="tab-pane fade pt-2" id="tab-links" aria-labelledby="tab-btn-links" role="tabpanel">
 
-                    <div class="row">
-                        <div class="col-md-2 pl-1 border-right">
-                            <p class="fs-xs mb-0"><i data-toggle="modal" data-target="#linksModal" class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Show as:</p>
-                            
-                            <!--
-                            <div class="border optionbox">
-                                <button class="dropdown-item pl-2">Disparities</button>
-                                <button class="dropdown-item pl-2">Correlates</button>
+                        <div class="row">
+                            <div class="col-md-2 pl-1 border-right">
+                                <p class="fs-xs mb-0"><i data-toggle="modal" data-target="#linksModal" class="fas fa-question-circle float-right helper text-primary fs-sm"></i>Show as:</p>
+                                
+                                <!--
+                                <div class="border optionbox">
+                                    <button class="dropdown-item pl-2">Disparities</button>
+                                    <button class="dropdown-item pl-2">Correlates</button>
+                                </div>
+                                -->
+
+                                
+                                <div class="border optionbox mb-2 py-1">
+                                    <div class="btn-group btn-group-toggle btn-toggle-disparities" data-toggle="buttons">
+
+                                        <label class="btn btn-sm btn-block btn-outline-primary dropdown-item my-0" id="show-disparities">
+                                            <input type="radio" name="options" id="disparities-btn" autocomplete="off"> Disparities
+                                        </label>
+                                        <label class="btn btn-sm btn-block btn-outline-primary dropdown-item my-0 active" id="show-links">
+                                            <input type="radio" name="options" id="links-btn" autocomplete="off" checked> Correlates
+                                        </label>
+
+                                    </div>
+                                </div>
+
+                                <p class="fs-xs mb-0">Correlate with:</p>
+                                <div class="border optionbox-lg">
+                                    <div class="" aria-labelledby="dropdownLinksMeasures">
+                                        <!-- INSERT MENU ITEMS HERE -->
+                                    </div>
+                                </div>
+
                             </div>
-                            -->
 
-                            
-                            <div class="border optionbox mb-2 py-1">
-                                <div class="btn-group btn-group-toggle btn-toggle-disparities" data-toggle="buttons">
-
-                                    <label class="btn btn-sm btn-block btn-outline-primary dropdown-item my-0" id="show-disparities">
-                                        <input type="radio" name="options" id="disparities-btn" autocomplete="off"> Disparities
-                                    </label>
-                                    <label class="btn btn-sm btn-block btn-outline-primary dropdown-item my-0 active" id="show-links">
-                                        <input type="radio" name="options" id="links-btn" autocomplete="off" checked> Correlates
-                                    </label>
-
+                            <div class="col-md-10">
+                                <span id="linksTitle" class="home-label border-bottom"></span>
+                                <!-- INSERT LINKS CHART HERE -->
+                                <div id="links" class="vis-bucket"></div>
+            
+                                <div id="links-unreliability" class="pt-2 asidebox hide my-1">
+                                    <!-- INSERT UNRELIABILITY FLAGS HERE -->
                                 </div>
                             </div>
+                        </div>
 
-                            <p class="fs-xs mb-0">Correlate with:</p>
-                            <div class="border optionbox-lg">
-                                <div class="" aria-labelledby="dropdownLinksMeasures">
-                                    <!-- INSERT MENU ITEMS HERE -->
-                                </div>
+
+                        <!-- old links buttons -->
+                        <div class="dropdown hide">
+
+                            <!-- disparities button - display style changed to show or hide (currently hidden full time due to glitch on percents-->
+
+                            <div class="btn-group btn-group-toggle btn-toggle-disparities" data-toggle="buttons" style="display:inline">
+
+                                <label class="btn btn-sm mr-1 float-right btn-outline-secondary" id="show-disparities">
+                                    <input type="radio" name="options" id="disparities-btn" autocomplete="off"> Disparities
+                                </label>
+
+
+                                <label class="btn btn-sm float-right btn-outline-secondary active" id="show-links">
+                                    <input type="radio" name="options" id="links-btn" autocomplete="off" checked> Correlates
+                                </label>
+
+
                             </div>
 
-                        </div>
+                            <button class="btn btn-sm float-right btn-outline-secondary dropdown-toggle mb-1" type="button"
+                            id="dropdownLinksMeasures" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <!-- choose dataset --> </button>
 
-                        <div class="col-md-10">
-                            <span id="linksTitle" class="home-label border-bottom"></span>
-                            <!-- INSERT LINKS CHART HERE -->
-                            <div id="links" class="vis-bucket"></div>
-        
-                            <div id="links-unreliability" class="pt-2 asidebox hide my-1">
-                                <!-- INSERT UNRELIABILITY FLAGS HERE -->
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownLinksMeasures">
+                                <!-- INSERT MENU ITEMS HERE -->
                             </div>
+                            
                         </div>
+
+
                     </div>
-
-
-                    <!-- old links buttons -->
-                    <div class="dropdown hide">
-
-                        <!-- disparities button - display style changed to show or hide (currently hidden full time due to glitch on percents-->
-
-                        <div class="btn-group btn-group-toggle btn-toggle-disparities" data-toggle="buttons" style="display:inline">
-
-                            <label class="btn btn-sm mr-1 float-right btn-outline-secondary" id="show-disparities">
-                                <input type="radio" name="options" id="disparities-btn" autocomplete="off"> Disparities
-                            </label>
-
-
-                            <label class="btn btn-sm float-right btn-outline-secondary active" id="show-links">
-                                <input type="radio" name="options" id="links-btn" autocomplete="off" checked> Correlates
-                            </label>
-
-
-                        </div>
-
-                        <button class="btn btn-sm float-right btn-outline-secondary dropdown-toggle mb-1" type="button"
-                        id="dropdownLinksMeasures" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <!-- choose dataset --> </button>
-
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownLinksMeasures">
-                            <!-- INSERT MENU ITEMS HERE -->
-                        </div>
-                        
-                    </div>
-
-
                 </div>
-                </div>
+
+                
             </div>
 
                         
                         <!-- FOOTER BUSINESS -->
-                        <div class="row">
-                            <div class="col-md-6 col-sm-12">
+                        <div class="row mb-4">
+                            <div class="col-md-2"></div>
+                            <div class="col-md-5 col-sm-12">
                                 <div class="dropdown">
-                                    <button class="btn btn-sm btn-block btn-outline-light text-secondary dropdown-toggle mb-1" 
+                                    <button class="btn btn-sm btn-block btn-outline-light text-secondary dropdown-toggle" 
                                     type="button"
                                     id="downloadDD" 
                                     data-toggle="dropdown" 
                                     aria-haspopup="true" 
                                     aria-expanded="false"
                                     ><i class="fa fa-download mr-1"></i>Download Data
-                                </button>
-                                <div class="dropdown-menu dropdown-menu-right" 
-                                aria-labelledby="downloadDD">
-                                <a class="dropdown-item buttons-csv btn-outline-info" id="chartView"><i class="fa fa-download mr-1"></i>Download this view</a>
-                                <a class="dropdown-item buttons-csv btn-outline-info" id="allData"><i class="fa fa-download mr-1"></i>Download full data table</a>
-                                <a class="dropdown-item btn-outline-info" href="https://github.com/nychealth/EHDP-data/tree/production/indicators" target="_blank"><i class="fas fa-external-link-alt mr-1"></i>Data Github repo</a>
-                                <!--<a class="dropdown-item buttons-csv btn-outline-info" id="thisView">Current table view</a>-->        
-                                <!--<a class="dropdown-item buttons-csv btn-outline-info" id="rawData">Raw data for this indicator</a>-->
+                                    </button>
+                                    <div class="dropdown-menu dropdown-menu-right" 
+                                    aria-labelledby="downloadDD">
+                                    <a class="dropdown-item buttons-csv btn-outline-info" id="chartView"><i class="fa fa-download mr-1"></i>Download this view</a>
+                                    <a class="dropdown-item buttons-csv btn-outline-info" id="allData"><i class="fa fa-download mr-1"></i>Download full data table</a>
+                                    <a class="dropdown-item btn-outline-info" href="https://github.com/nychealth/EHDP-data/tree/production/indicators" target="_blank"><i class="fas fa-external-link-alt mr-1"></i>Data Github repo</a>
+                                    <!--<a class="dropdown-item buttons-csv btn-outline-info" id="thisView">Current table view</a>-->        
+                                    <!--<a class="dropdown-item buttons-csv btn-outline-info" id="rawData">Raw data for this indicator</a>-->
+                                    </div>
                                 </div>
-                                </div>
 
-                            </div>
-
-                            <div class="col-md-6 col-sm-12">
-                                <button class="btn float-right btn-sm btn-block btn-outline-light text-secondary mb-1"
-                                onclick="copyCitation()" id="citeButton"><i class="fas fa-copy mr-1"></i>Copy citation</button>
-                                <input type="text" id="citeText" value=""
-                                style="display:inline-block; width:100%; height: 40px; font-size: 14px;"
-                                class="my-2 sr-only">
-                                
-                            </div>
-
-                        </div>
-                        
-                        <div class="row mb-2">
-                            <div class="col-md-6 col-sm-12 h-100">
                                 <div class="asidebox pb-0 mb-0">
                                     <span class="fs-sm font-weight-bold"><i class="fas fa-info-circle mr-1"></i>How calculated</span>
                                 </div>
@@ -768,24 +747,26 @@
                         
                         
                                 </div>
-                        
+
                             </div>
-                        
-                            <div class="col-md-6 col-sm-12 h-100">
+
+                            <div class="col-md-5 col-sm-12">
+                                <button class="btn btn-sm btn-block btn-outline-light text-secondary"
+                                onclick="copyCitation()" id="citeButton"><i class="fas fa-copy mr-1"></i>Copy citation</button>
+                                    <input type="text" id="citeText" value=""
+                                    style="display:inline-block; width:100%; height: 40px; font-size: 14px;"
+                                    class="my-2 sr-only">
+
                                 <div class="asidebox pb-0 mb-0">
                                     <span class="fs-sm font-weight-bold"><i class="fas fa-info-circle mr-1"></i>Data sources</span>
                                 </div>
                                 <div class="asidebox visFooterBox">
-                                <p class="fs-xs indicator-sources"></p>
-                        
+                                    <p class="fs-xs indicator-sources"></p>
                                 </div>
-
-
                                 
                             </div>
-            
-                        </div>
 
+                        </div>
 
                         <!--.footer -->
 
