--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -34,7 +34,8 @@
 
     /* Set font-size for table headers */
     #summary-table table thead tr th {
-        font-size: 13px!important;
+        font-size: 12px!important;
+        color: green;
     }
 
     /* This CSS controls read more/show less toggle. */
@@ -313,6 +314,12 @@
         table {
             font-size: .875rem!important; 
         }
+
+        table .group td {
+            background-color: #F0F0F0;
+            color: green;
+            font-weight: bold;
+            }
 
     </style>
 
